1. Added appropriate file extensions on each nav button. 2. Added box-sizing: border-box for entire website to prevent content from going out of wrapper. 3. Added wrapper for all pages so I can use background image for entire page. 4. Working on functionality of wrapper image, which doesn't show. 5. Added display: flex to navbar to use flexbox features (i.e., stretch and centering). 6. Added hover, focus, and active to nav buttons. 7. Wrapper has temporary border to facilitate development of pages.

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,36 @@
+* {
+	box-sizing: border-box;
+}
+#wrapper {
+	width: 100%;
+	margin: auto;
+	background-image: url("C:\Users\ehill\Pictures\WebDev/OnesAndZeroes-2000x1460.jpg");
+	background-repeat: repeat;
+	border: solid 2px black;
+	border-radius: 10px 10px 10px 10px;
+	}
 h1 {
 	color: red;
 	}
+nav {
+	display: flex;
+}
+.portfolio-link-nav {
+	margin: 0 5px;
+	padding: 10px 10px;
+	border-radius: 5px;
+	border-bottom: 2px solid white;
+	background-color: /*#b3c6ff;*/black;
+	background-image: url("C:\Users\ehill\Pictures\WebDev/OnesAndZeroes-187x125.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	text-decoration: none;
+	text-align: center;
+	color: #ffffaa;
+	align-items: stretch;
+	width: 100%;
+	}
+a:hover, a:focus, a:active {
+	color: red;
+	text-decoration: none;
+}
